<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>javafxdemo</groupId>
	<artifactId>scatter-plot</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<build>
		<sourceDirectory>src</sourceDirectory>
		<plugins>
			<plugin>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<release>14</release>
					<compilerArgs>
						<arg>--enable-preview</arg>
					</compilerArgs>
				</configuration>
			</plugin>

			<!-- see https://github.com/openjfx/javafx-maven-plugin -->
			<!-- mvn javafx:run to run the application -->
			<!-- mvn javafx:jlink to generate a runtime image -->
			<plugin>
				<groupId>org.openjfx</groupId>
				<artifactId>javafx-maven-plugin</artifactId>
				<version>0.0.5</version>
				<configuration>
					<mainClass>program.PointPlotter</mainClass>
					<options>
						<option>--enable-preview</option>
					</options>
					<launcher>plotter</launcher>
					<jlinkImageName>pointplotter</jlinkImageName>
					<jlinkZipName>pointplotter</jlinkZipName>
				</configuration>
			</plugin>
		</plugins>

		<resources>
			<resource>
				<directory>res</directory>
				<filtering>false</filtering>
			</resource>
		</resources>
	</build>

	<dependencies>
		<!-- see https://openjfx.io/openjfx-docs/#maven -->
		<dependency>
			<groupId>org.openjfx</groupId>
			<artifactId>javafx-fxml</artifactId>
			<version>14.0.2.1</version>
		</dependency>
	</dependencies>
</project>